create menu item section and style it

--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -37,4 +37,8 @@
       background-color: white;
       font-size: max(1vw,13px);
       border-radius: 50px;
+      cursor: pointer;
+}
+.header-content button:hover{
+      color: tomato;
 }
