--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -16,6 +16,10 @@
       font-size: 18px;
 }
 
+.navbar-menu .active{
+      color: tomato;
+}
+
 .navbar-right{
       display: flex;
       align-items: center;
@@ -39,7 +43,7 @@
 
 .navbar .active{
       padding-bottom: 2px;
-      border-bottom: 2px solid #49557e;
+      border-bottom: 2px solid tomato;
 }
 
 .navbar li{
