--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -7,6 +7,7 @@
       gap: 20px;
       padding: 20px 8vw;
       padding-top: 80px;
+      margin-top: 100px;
 }
 
 .footer-content{
@@ -16,17 +17,35 @@
       gap: 80px;
 }
 
-.footer-content-left , .footer-content-right , .footer-content-center {
+.footer-content-left , .footer-content-right , .footer-content-center{
       display: flex;
       flex-direction: column;
       align-items: start;
       gap: 20px;
 }
 
-.footer-social-icons{
-
+.footer-content-left li, .footer-content-right li, .footer-content-center li{
+      list-style: none;
+      margin-bottom: 10px;
+      cursor: pointer;
 }
 
+.footer-content-right h2, .footer-content-center h2{
+     color: white;
+}
+
+.footer-social-icons img{
+      width: 40px;
+      margin-right: 15px;
+}
+
+.footer hr{
+      width: 100%;
+      height: 2px;
+      margin: 20px 0;
+      background-color: gray;
+      border: none;
+}
 .footer-content-center{
 
 }
