make the website responsive

--- a/frontend/src/components/ExploreMenu/ExploreMenu.css
+++ b/frontend/src/components/ExploreMenu/ExploreMenu.css
@@ -58,3 +58,13 @@
       border-radius: 50%;
 
 }
+
+@media (max-width:1050px) {
+      .explore-menu-text{
+            max-width: 100%;
+            font-size: 14px;
+      }
+      .explore-menu-list-item img{
+            max-width: 75%;
+      }
+}
