--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -46,6 +46,15 @@
       background-color: gray;
       border: none;
 }
-.footer-content-center{
 
+@media (max-width:750px) {
+      .footer-content{
+            display: flex;
+            flex-direction: column;
+            gap: 35px;
+      }
+      .footer-copyright{
+            text-align: center;
+      }
+      
 }
