--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -42,3 +42,23 @@
 .header-content button:hover{
       color: tomato;
 }
+
+@media (max-width:1050px) {
+
+      .header-content{
+            max-width: 45%;
+      }
+}
+
+@media (max-width:750px) {
+      
+      .header-content{
+            max-width: 65%;
+      }
+      .header-content p{
+            display: none;
+      }
+      .header-content button{
+            padding: 2vw 4vw;
+      }
+}
