--- a/admin/src/component/Sidebar/Sidebar.css
+++ b/admin/src/component/Sidebar/Sidebar.css
@@ -6,7 +6,20 @@
 }
 
 .sidebar-options {
+  padding-top: 50px;
+  padding-left: 20%;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
 .sidebar-option {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  border: 1.5px solid #a9a9a9;
+  border-right: 0;
+  padding: 8px 10px;
+  border-radius: 3px 0px 0px 3px;
+  cursor: pointer;
 }
