Style:add page to add some style

--- a/admin/src/pages/Add/Add.css
+++ b/admin/src/pages/Add/Add.css
@@ -5,16 +5,24 @@
   color: #6d6d6d;
   font-size: 16px;
 }
-
+.add form {
+  gap: 20px;
+}
 .flex-col {
 }
 
-.add-image-upload {
+.add-image-upload img {
+  width: 120px;
 }
 
-.add-product-name {
-}
+.add-product-name,
 .add-product-description {
+  width: max(40%, 280px);
+}
+
+.add-product-name input,
+.add-product-description textarea {
+  padding: 10px;
 }
 
 .add-category-price {
