--- a/admin/src/pages/Add/Add.css
+++ b/admin/src/pages/Add/Add.css
@@ -29,6 +29,21 @@
   display: flex;
   gap: 30px;
 }
+
+.add-category-price select,
+.add-category-price input {
+  max-width: 120px;
+  padding: 10px;
+}
+
+.add-btn {
+  max-width: 120px;
+  border: none;
+  padding: 10px;
+  background-color: black;
+  color: white;
+  cursor: pointer;
+}
 .add-category {
 }
 
